# Multi-Agent-System-MCP

./: .gitignore  Multi-Agent-System-MCP.code-workspace  README.md  auth.py  custom_weather_mcp_server.py  frontend.py  main.py  mcp_client.py  project.py  pyproject.toml
tools/: tavily_tool.py
travel_plans/: travel_plan_20260701_182819.md
