[project]
name = "multi-agent-system-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-postgres>=3.1.0",
    "mcp>=1.28.1",
    "psycopg-pool>=3.3.1",
    "psycopg[binary,pool]>=3.3.4",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
]
